--- a/innovationscenteret/scss/modules/_footer.scss
+++ b/innovationscenteret/scss/modules/_footer.scss
@@ -6,12 +6,26 @@
 
 $top-and-button-margin: 2em;
 
+footer {
+
+}
+
 .footer {
+  position: absolute;
+  bottom: 0;
+
+  width: 100%;
+
+  background-color: black;
+
   &--content {
     margin-left: auto;
     margin-right: auto;
     max-width: $layout-max-width;
+    padding-right: 1em;
+    padding-left: 1em;
   }
+
   &--mail {
     display: inline-block;
     vertical-align: middle;
@@ -22,6 +36,7 @@ $top-and-button-margin: 2em;
       color: white;
     }
   }
+
   &--socialmedia {
     float: right;
     margin-top: $top-and-button-margin;
